--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -1,6 +1,8 @@
 [[Creating_a_Migration_Plan]]
 = Creating and Running a Migration Plan
 
+TBD: Diagram from https://github.com/RedHatDemos/RHS-Optimize_IT-Infrastructure_Migration/blob/master/docs/00-redhat_solutions-insfrastructure_migration_v2-deployment.adoc#vm-migration-workflow to be inserted here.
+
 Create and run a migration plan:
 
 . Go to menu:Compute[Migration] and click *Create Migration Plan*.
@@ -9,9 +11,7 @@ Create and run a migration plan:
 . Select *Choose from a list of VMs discovered in the selected infrastructure mapping* and click *Next*.
 . Select the virtual machines to migrate and click *Next*.
 . Select *Start Migration Immediately* and click *Create*.
-. Click *Close*. The migration plan may take some time to complete. The "Migrations in Progress" message, the migration status, and the elapsed time are displayed.
-+
-You can view the status of the individual virtual machines in menu:Compute[Infrastructure > Hosts].
+. Click *Close*. The migration plan may take some time to complete. "In Progress Plans", status of the datastores and VMs, and elapsed time are displayed.
 . Optional. You can view the progress of the migration in the CloudForms log:
 +
 ----
