Applied peer review edits.

--- a/doc-Monitoring_Alerts_and_Reporting/topics/Chargeback_Rates.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Chargeback_Rates.adoc
@@ -12,14 +12,14 @@ Chargeback can be calculated in the following currencies:
 * Australian dollar (AUD)
 * Brazilian real (BRL)
 * Swiss franc (CHF)
-* Renminbi (CNY)
+* Chinese yuan renminbi (CNY)
 * Euro (EUR)
 * Pound sterling (GBP)
 * Indian rupee (INR)
 * Japanese yen (JPY)
 * South Korean won (KRW)
 * Mexican peso (MXN)
-* Norwegain krone (NOK)
+* Norwegian krone (NOK)
 * Russian ruble (RUB)
 * Swedish krona (SEK)
 * Turkish lira (TRY)
