Added a note about the ability to apply advanced settings.

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -1496,12 +1496,13 @@ image:use-configuration-settings.png[]
 [[advanced-settings]]
 ===== Advanced Settings
 
-You may be instructed by Red Hat to edit some configuration settings manually. This feature is available for a limited number of options and can only be used by users assigned the super administrator role. Changing
-settings using this procedure may disable your {product-title} server.
+You may be instructed by Red Hat to edit some configuration settings manually. This feature is available for a limited number of options and can only be used by users assigned the super administrator role. Changing settings using this procedure may disable your {product-title_short} server.
 
 [NOTE]
 =========
-Only make manual changes to your configuration files if directed to do so by Red Hat.
+* Only make manual changes to your configuration files if directed to do so by Red Hat.
+
+* {product-title_short} provides the ability to edit advanced settings for all appliances from the user interface. You can also specify advanced settings for entire zones, with the advanced settings applied to individual appliances in that zone overriding zone-level settings when set.
 =========
 
 [[editing-configuration-files-manually]]
