--- a/doc-V2V_Guide/cfme/doc/modules/proc_Installing_cloudforms_automatically.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Installing_cloudforms_automatically.adoc
@@ -1,9 +1,9 @@
 [id="proc_Installing_cloudforms_automatically"]
 = NEW: Installing CloudForms Automatically
 
-*(%AP: This section needs to be reviewed.)*
+*(%AP: This section needs to be reviewed. Moran Goldboim says the user needs to sign into the Customer Portal. When does this step occur?)*
 
-You can install CloudForms automatically with the oVirt Ansible role, `oVirt.manageiq`. 
+You can install CloudForms automatically with the oVirt Ansible role, `oVirt.manageiq`.
 
 Ansible roles are located in +/usr/share/doc/ovirt-ansible-roles-_version_/examples+.
 
@@ -56,4 +56,3 @@ You will be asked for a vault password.
 == Additional resources
 
 * For more details, see link:https://github.com/oVirt/ovirt-ansible-manageiq/blob/master/README.md[Deploy ManageIQ in oVirt].
-
