--- a/doc-V2V_Guide/cfme/doc/asm_Migration.adoc
+++ b/doc-V2V_Guide/cfme/doc/asm_Migration.adoc
@@ -1,7 +1,9 @@
 [[Migration]]
-== Migration
+= Migration
 
-TBD:
+*TBD*: Diagram from https://github.com/RedHatDemos/RHS-Optimize_IT-Infrastructure_Migration/blob/master/docs/00-redhat_solutions-insfrastructure_migration_v2-deployment.adoc#vm-migration-workflow to be inserted here.
+
+*TBD*:
 
 * How long will the migration take?
 * How to estimate remaining migration time
