Updated the procedure on adding an EC2 provider with the custom endpoint URL field and a note.

--- a/doc-Managing_Providers/topics/Adding_Amazon_EC2_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_Amazon_EC2_Providers.adoc
@@ -10,6 +10,13 @@ Complete the following procedure to add an Amazon EC2 cloud provider in {product
 . Select a *Region*.
 . Select the appropriate *Zone* if you have more than one available.
 . Under *Endpoints*, click the *Default* tab.
+.. Enter the *Endpoint URL*. 
++
+[NOTE]
+====
+In some cases, there is a need to point to a specific URL instead of the standard URL endpoint, see link:https://docs.aws.amazon.com/AmazonVPC/latest/UserGuide/vpce-interface.html[Interface VPC Endpoints (AWS PrivateLink)], for example. Therefore, AWS allows users to set a custom endpoint URL when connecting to certain services, which you can add in the {product-title_short} user interface per Amazon EC2 provider.
+====
++
 .. Generate an *Access Key* in the *Security Credentials* of your Amazon AWS account.
   The *Access Key ID* acts as your *User ID*, and your *Secret Access Key* acts as your *Password*.
 .. Click *Validate* to validate the credentials.
